Fix list item overflow

--- a/app/javascript/mastodon/components/account_list_item/styles.module.scss
+++ b/app/javascript/mastodon/components/account_list_item/styles.module.scss
@@ -24,6 +24,13 @@
   vertical-align: -4px;
 }
 
+.handle {
+  display: block;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
 .button {
   align-self: start;
 }
